# DigitalCarbonFramework

./: .buildinfo  .gitignore  LICENCE  NOTICE  README.md  contributing.md  genindex.html  governance.md  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: documentation.yaml  python.yaml  release.yaml
_modules/: index.html
_modules/carbon/: compute_footprints.html  digital_carbon_framework.html  pandas.html  utils.html
_sources/apidoc/: carbon.rst.txt  modules.rst.txt
_static/: documentation_options.js
apidoc/: carbon.html  modules.html
docs/: conf.py  index.rst
src/carbon/: __init__.py  __main__.py  compute_footprints.py  digital_carbon_framework.py  iso2.yml  iso3.yml  oneframe_digital.py  oneframe_digital.yml  pandas.py  utils.py
tests/: test_digital_carbon_framework.py  test_oneframe_digital.py
